[tool.poetry]
name = "pywarp10"
version = "0.3.2"
description = "Simplify use of warpscript with python."
authors = ["Denis Roussel <droussel@centreon.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
py4j = "^0"
pandas = "^2"
dateparser = "^1"
durations = "^0"
tqdm = "^4"
requests = "^2"

[tool.poetry.group.dev.dependencies]
pandas-stubs = "^2.2.3.241126"
ruff = "^0.8.1"
mypy = "^1.13.0"
types-dateparser = "^1.2.0.20240420"
types-requests = "^2.32.0.20241016"
pytest = "^8.3.4"
coverage-badge = "^1"
coverage = "^7.6.8"
pytest-mock = "^3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
